--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -29,28 +29,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dDo-ad-t0B">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dDo-ad-t0B">
                                 <rect key="frame" x="46" y="250.5" width="282" height="266.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.0087729168779999995" green="0.015778338789999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="30" id="aOL-yi-O0Q">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="30" id="aOL-yi-O0Q" customClass="AnswerTableViewCell" customModule="SPAPP" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="282" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aOL-yi-O0Q" id="YNb-ur-G5y">
-                                            <rect key="frame" x="0.0" y="0.0" width="282" height="29.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="282" height="30"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YqB-ol-TAq">
+                                                    <rect key="frame" x="21" y="-49.5" width="240" height="128"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nl-dT-F9H">
+                                                    <rect key="frame" x="120" y="3.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="YqB-ol-TAq" firstAttribute="height" secondItem="YNb-ur-G5y" secondAttribute="height" multiplier="0.85" id="L77-kU-zpZ"/>
+                                                <constraint firstItem="8Nl-dT-F9H" firstAttribute="centerX" secondItem="YqB-ol-TAq" secondAttribute="centerX" id="SXA-Bn-INi"/>
+                                                <constraint firstItem="8Nl-dT-F9H" firstAttribute="centerY" secondItem="YqB-ol-TAq" secondAttribute="centerY" id="bro-cx-7Ld"/>
+                                                <constraint firstItem="YqB-ol-TAq" firstAttribute="width" secondItem="YNb-ur-G5y" secondAttribute="width" id="kY2-6U-mc0"/>
+                                                <constraint firstItem="YqB-ol-TAq" firstAttribute="centerY" secondItem="YNb-ur-G5y" secondAttribute="centerY" id="sfv-73-MPb"/>
+                                                <constraint firstItem="YqB-ol-TAq" firstAttribute="centerX" secondItem="YNb-ur-G5y" secondAttribute="centerX" id="vO7-vx-XC5"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="answerLabel" destination="8Nl-dT-F9H" id="JrO-1A-Ivq"/>
+                                            <outlet property="backgroundAnswerView" destination="YqB-ol-TAq" id="DZT-ed-S0d"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi" userLabel="questionLabel">
-                                <rect key="frame" x="26" y="55.5" width="50.5" height="122"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi" userLabel="questionLabel">
+                                <rect key="frame" x="26" y="55.5" width="40.5" height="122"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="122" id="y9i-Tj-DHG" userLabel="height ="/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="claraSpenceBust" translatesAutoresizingMaskIntoConstraints="NO" id="8wF-to-g5i" userLabel="claraSpenceBust">
@@ -64,7 +91,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="5O8-ah-JPe"/>
                                 </constraints>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -131,91 +158,6 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="mHv-tG-H4s">
-            <objects>
-                <viewController id="L55-4o-YgA" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="rfq-1m-WrD"/>
-                        <viewControllerLayoutGuide type="bottom" id="BfR-dp-GtA"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Kng-t8-1uL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmo-jU-2VF">
-                                <rect key="frame" x="57" y="70" width="74" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="1gv-oa-UMe"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                                <size key="shadowOffset" width="1" height="-1"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XVw-Wt-rY2">
-                                <rect key="frame" x="152" y="70" width="71" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="68F-dN-JyA"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                                <size key="shadowOffset" width="1" height="-1"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NrH-0i-VRu">
-                                <rect key="frame" x="245" y="70" width="74" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="TEK-Nz-pTP"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                                <size key="shadowOffset" width="1" height="-1"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uyf-EI-Iof" userLabel="White View">
-                                <rect key="frame" x="87" y="30" width="200" height="40"/>
-                                <color key="backgroundColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="7pI-Nx-yHm"/>
-                                    <constraint firstAttribute="height" constant="40" id="Fyx-IW-90B"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" HOW YOU DID" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZX-Xc-kdW" userLabel="HOW YOU DID">
-                                <rect key="frame" x="104.5" y="35" width="165" height="31.5"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2b4-Cd-I3z">
-                                <rect key="frame" x="87.5" y="233.5" width="200" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="7Bf-xN-WVd"/>
-                                    <constraint firstAttribute="width" secondItem="2b4-Cd-I3z" secondAttribute="height" multiplier="1:1" id="dRl-vf-1Yk"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <constraints>
-                            <constraint firstItem="zmo-jU-2VF" firstAttribute="centerY" secondItem="Kng-t8-1uL" secondAttribute="centerY" multiplier="0.3" id="2nM-hp-7WQ"/>
-                            <constraint firstItem="XVw-Wt-rY2" firstAttribute="centerX" secondItem="Kng-t8-1uL" secondAttribute="centerX" id="4VW-R7-fDn"/>
-                            <constraint firstItem="NrH-0i-VRu" firstAttribute="centerX" secondItem="Kng-t8-1uL" secondAttribute="centerX" multiplier="1.5" id="BLR-cV-O7m"/>
-                            <constraint firstItem="fZX-Xc-kdW" firstAttribute="centerY" secondItem="uyf-EI-Iof" secondAttribute="centerY" id="DWA-uZ-NYL"/>
-                            <constraint firstItem="fZX-Xc-kdW" firstAttribute="centerX" secondItem="uyf-EI-Iof" secondAttribute="centerX" id="HC8-mL-fbI"/>
-                            <constraint firstItem="uyf-EI-Iof" firstAttribute="centerX" secondItem="Kng-t8-1uL" secondAttribute="centerX" id="OWV-KM-l66"/>
-                            <constraint firstItem="2b4-Cd-I3z" firstAttribute="centerY" secondItem="Kng-t8-1uL" secondAttribute="centerY" id="TGd-5Y-Hsj"/>
-                            <constraint firstItem="uyf-EI-Iof" firstAttribute="centerY" secondItem="Kng-t8-1uL" secondAttribute="centerY" multiplier="0.15" id="Yzt-Tp-6xZ"/>
-                            <constraint firstItem="2b4-Cd-I3z" firstAttribute="centerX" secondItem="Kng-t8-1uL" secondAttribute="centerX" id="dTT-uF-Erq"/>
-                            <constraint firstItem="NrH-0i-VRu" firstAttribute="centerY" secondItem="zmo-jU-2VF" secondAttribute="centerY" id="gXy-hh-zmO"/>
-                            <constraint firstItem="XVw-Wt-rY2" firstAttribute="centerY" secondItem="zmo-jU-2VF" secondAttribute="centerY" id="jIe-jG-IIk"/>
-                            <constraint firstItem="zmo-jU-2VF" firstAttribute="centerX" secondItem="Kng-t8-1uL" secondAttribute="centerX" multiplier="0.5" id="x6r-r8-yWh"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="s0d-uE-a9n" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="861.60000000000002" y="138.98050974512745"/>
-        </scene>
         <!--Menu View Controller-->
         <scene sceneID="VXs-cS-e7p">
             <objects>
@@ -272,7 +214,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.031578028919892698" green="0.30875062910783946" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="f2R-7f-pbj" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" id="DEi-Dh-bUe"/>
                             <constraint firstItem="2Nd-ng-Koz" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" multiplier="0.5" id="HNw-QC-9FM"/>
