--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dDo-ad-t0B">
-                                <rect key="frame" x="46" y="250.5" width="282" height="266.5"/>
+                                <rect key="frame" x="46" y="150.5" width="282" height="466.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.0087729168779999995" green="0.015778338789999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
@@ -46,9 +46,9 @@
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nl-dT-F9H">
-                                                    <rect key="frame" x="120" y="3.5" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nl-dT-F9H">
+                                                    <rect key="frame" x="14.5" y="2.5" width="254" height="25.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -58,6 +58,8 @@
                                                 <constraint firstItem="YqB-ol-TAq" firstAttribute="height" secondItem="YNb-ur-G5y" secondAttribute="height" multiplier="0.85" id="L77-kU-zpZ"/>
                                                 <constraint firstItem="8Nl-dT-F9H" firstAttribute="centerX" secondItem="YqB-ol-TAq" secondAttribute="centerX" id="SXA-Bn-INi"/>
                                                 <constraint firstItem="8Nl-dT-F9H" firstAttribute="centerY" secondItem="YqB-ol-TAq" secondAttribute="centerY" id="bro-cx-7Ld"/>
+                                                <constraint firstItem="8Nl-dT-F9H" firstAttribute="width" secondItem="YqB-ol-TAq" secondAttribute="width" multiplier="0.9" id="fRv-LF-z9p"/>
+                                                <constraint firstItem="8Nl-dT-F9H" firstAttribute="height" secondItem="YqB-ol-TAq" secondAttribute="height" id="gt3-Qd-LIg"/>
                                                 <constraint firstItem="YqB-ol-TAq" firstAttribute="width" secondItem="YNb-ur-G5y" secondAttribute="width" id="kY2-6U-mc0"/>
                                                 <constraint firstItem="YqB-ol-TAq" firstAttribute="centerY" secondItem="YNb-ur-G5y" secondAttribute="centerY" id="sfv-73-MPb"/>
                                                 <constraint firstItem="YqB-ol-TAq" firstAttribute="centerX" secondItem="YNb-ur-G5y" secondAttribute="centerX" id="vO7-vx-XC5"/>
@@ -126,7 +128,7 @@
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gt-aB-0J7"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.3" id="8v5-Fh-5wO"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.15" id="Apr-eZ-sP0"/>
-                            <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="BhB-nM-KZn"/>
+                            <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.7" id="BhB-nM-KZn"/>
                             <constraint firstItem="d5m-rg-gde" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PZ8-7b-bX0"/>
                             <constraint firstItem="9YG-I7-HBv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.78" id="Qd9-sH-aKY"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="QzG-Q3-ZMh"/>
