--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dDo-ad-t0B">
-                                <rect key="frame" x="46" y="150.5" width="282" height="466.5"/>
+                                <rect key="frame" x="46" y="217" width="282" height="333.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.0087729168779999995" green="0.015778338789999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
@@ -114,6 +114,12 @@
                                     <constraint firstAttribute="width" constant="180" id="sYJ-Vr-eBd"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Try Again!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7k-4A-hSC">
+                                <rect key="frame" x="141" y="570.5" width="92" height="27.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                <color key="textColor" red="0.030578946184437128" green="0.0061527250891627583" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImS-Wg-am9" userLabel="questionCount">
                                 <rect key="frame" x="166.5" y="39.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -125,14 +131,16 @@
                         <constraints>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" id="0rI-Cz-kPA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1lj-O8-iED"/>
+                            <constraint firstItem="m7k-4A-hSC" firstAttribute="centerX" secondItem="dDo-ad-t0B" secondAttribute="centerX" id="5m7-OH-7e9"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gt-aB-0J7"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.3" id="8v5-Fh-5wO"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.15" id="Apr-eZ-sP0"/>
-                            <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.7" id="BhB-nM-KZn"/>
+                            <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="BhB-nM-KZn"/>
                             <constraint firstItem="d5m-rg-gde" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PZ8-7b-bX0"/>
                             <constraint firstItem="9YG-I7-HBv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.78" id="Qd9-sH-aKY"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="QzG-Q3-ZMh"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-25" id="Tti-P2-wTb"/>
+                            <constraint firstItem="m7k-4A-hSC" firstAttribute="top" secondItem="dDo-ad-t0B" secondAttribute="bottom" constant="20" id="WxM-B9-4VV"/>
                             <constraint firstItem="ImS-Wg-am9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZHv-YC-IE0"/>
                             <constraint firstItem="9YG-I7-HBv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a9I-5H-mne"/>
                             <constraint firstItem="d5m-rg-gde" firstAttribute="top" secondItem="kR3-Xf-vgH" secondAttribute="bottom" constant="10" id="cbH-f9-ola"/>
@@ -174,6 +182,7 @@
                         <outlet property="submitButton" destination="d5m-rg-gde" id="2rU-ZT-By3"/>
                         <outlet property="tableView" destination="dDo-ad-t0B" id="2AH-Sc-92C"/>
                         <outlet property="tableViewYConstraint" destination="Apr-eZ-sP0" id="Xke-Pt-rnR"/>
+                        <outlet property="tryAgainMessage" destination="m7k-4A-hSC" id="WBQ-7c-0B1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -291,18 +300,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAd-aF-8fQ">
-                                <rect key="frame" x="32" y="122" width="311" height="153"/>
+                                <rect key="frame" x="32" y="122" width="311" height="131.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="311" id="rh3-Cr-uPL"/>
                                 </constraints>
-                                <string key="text">3 years ago we transferred to The Spence School from our school in Hong Kong.
-We remember sitting in the Admissions Office, (just as you are now), waiting our turn to be interviewed and nervously leafing through the yearbooks and school brochures.</string>
+                                <string key="text">3 years ago we transferred to The Spence School from Hong Kong.
+We remember sitting in the Admissions Office waiting for our interview (just as you are now) and leafing through the yearbooks and school brochures.</string>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yaw-wa-yfC">
-                                <rect key="frame" x="32" y="286" width="311" height="153"/>
+                                <rect key="frame" x="32" y="264.5" width="311" height="153"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="311" id="Qyh-a3-Rgd"/>
                                 </constraints>
@@ -313,21 +322,21 @@ We named our creation SPAPP (get it?) </string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cox-PO-IeK">
-                                <rect key="frame" x="32.5" y="450" width="311" height="109.5"/>
+                                <rect key="frame" x="32.5" y="428.5" width="311" height="109.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="311" id="cSC-Q8-MhB"/>
                                 </constraints>
-                                <string key="text">After a crash course in setting up an LLC and late nights fixing the bugs in our code, we passed the Apple App Review Board and SPAPP went live on the App store
-June 7, 2018.</string>
+                                <string key="text">After a crash course in setting up an LLC and late nights fixing the bugs in our code, we passed the Apple App Review Board and SPAPP went live on the App store June 7, 2018.</string>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We hope you enjoy playing with it as much as we enjoyed creating it. Good luck!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bDb-IE-3lH">
-                                <rect key="frame" x="32" y="570.5" width="311" height="66"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bDb-IE-3lH">
+                                <rect key="frame" x="32" y="549" width="311" height="87.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="311" id="u2v-zz-rkB"/>
                                 </constraints>
+                                <string key="text">We hope you enjoy playing with it as much as we enjoyed creating it.           Good luck!                                                                   Brooke Pulling '21  Skyler Pulling '23</string>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
